--- a/pages/html/list.html
+++ b/pages/html/list.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="../../favicon.ico" type="image/png">
 
-	<title>Wrapper Online | Legacy Edition 1.0</title>
+	<title>Wrapper Online 2 Home</title>
 	<meta name="description" content="Wrapper Online is the web version of Wrapper: Offline | Legacy video maker for the GoAnimate community! Discord server: https://discord.gg/goanimate">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Wrapper Online Home" />
